fixed rain so it covers entire view

--- a/splmns-animation/src/components/RainOverlay.css
+++ b/splmns-animation/src/components/RainOverlay.css
@@ -1,7 +1,7 @@
 .rain-overlay {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 100;
   width: 100%;
   height: 100%;
   pointer-events: none;
